k8s/1_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: multi-tenant-app
  labels:
    app: postgres
    group: multi-tenant-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: multi-tenant-app
  labels:
    app: postgres
    group: multi-tenant-app
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30030
  selector:
    app: postgres
