k8s/2_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: multi-tenant-app
  labels:
    app: server
    group: multi-tenant-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: gitea.opracs.com/REPO/SERVER_IMAGE:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5111
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: multi-tenant-app
  labels:
    app: server
    group: multi-tenant-app
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 5111
      targetPort: 5111
